2008-03-01  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop-read): Set `desktop-dirname' to nil before
	running `desktop-not-loaded-hook' to allow modifying it.
	Don't show warning message if `desktop-dirname' was modified.

2008-03-01  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-neutralize-syntax-in-CPP): Fix coding bug.

	* progmodes/cc-langs.el (c-before-font-lock-function): Fix bug in
	doc-string, "c-old-LEN" -> "c-old-END".

2008-02-29  Glenn Morris  <rgm@gnu.org>

	* allout.el (allout-topic-encryption-bullet)
	(allout-passphrase-verifier-handling, allout-passphrase-hint-handling)
	(allout-encrypt-unencrypted-on-saves): Change defcustom :version
	from 22.0 to 22.1.

2008-02-29  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop-save): Save the buffer name if the
	uniquified base name is empty.

2008-02-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-sanity-check-hunk): Only accept an empty line if
	we still expect more lines.

2008-02-28  Juri Linkov  <juri@jurta.org>

	* startup.el (normal-splash-screen): Add argument `concise'.
	Remove unused binding `prev-buffer'.  Let-bind `splash-buffer'
	to the created buffer.  If `concise' is non-nil, call
	`display-buffer', otherwise `switch-to-buffer'.  Doc fix.
	(display-startup-screen): Add argument `concise' to the call to
	`normal-splash-screen'.

2008-02-28  Kim F. Storm  <storm@cua.dk>

	* startup.el (startup-echo-area-message): Check for about-emacs.

2008-02-28  Juri Linkov  <juri@jurta.org>

	* startup.el: Always add initial message to *scratch* buffer if
	`initial-scratch-message' is non-nil regardless of the value of
	`inhibit-startup-screen'.
	(inhibit-startup-screen, initial-scratch-message): Doc fix.
	(command-line-1): Move code that inserts `initial-scratch-message'
	up before the if-form that checks for `inhibit-startup-screen'.
	Suggested by Jonathan Rockway <jon@jrock.us>.

2008-02-28  Stefan Monnier  <monnier@iro.umontreal.ca>
