@@ -173,6 +173,7 @@
 
 (defcustom css-electric-keys '(?\} ?\;) ;; '()
   "Self inserting keys which should trigger re-indentation."
+  :version "22.2"
   :type '(repeat character)
   :options '((?\} ?\;)))
 
@@ -394,6 +395,7 @@
 
 (defcustom css-indent-offset 4
   "Basic size of one indentation step."
+  :version "22.2"
   :type 'integer)
 
 (defun css-indent-calculate ()
