@@ -1,3 +1,11 @@
+2008-03-01  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* textmodes/css-mode.el (css-indent-offset, css-electric-keys):
+	* textmodes/bibtex-style.el (bibtex-style-indent-basic):
+	* progmodes/verilog-mode.el (verilog-mode):
+	* net/socks.el (socks):
+	* vc-mtn.el (vc-mtn-mode-line-rewrite): Add :version.
+
 2008-03-01  Juanma Barranquero  <lekktu@gmail.com>
 
 	* desktop.el (desktop-read): Set `desktop-dirname' to nil before
